cal and home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,12 @@ flutter:
     - assets/images/battery.jpg
     - assets/images/bg.png
     - assets/images/welcome_icon.png
+    - assets/images/black_friday.jpg
+    - assets/images/rotaract.png
+    - assets/images/msc.png
+    - assets/images/gdg.png
+    - assets/images/mohit.png
+    - assets/images/endterm.png
 
     
 
